# qna-chat-agent

./: .env.example  README.md  TODO.md  agent.py  ai.py  config.py  embeddings.py  logger.py  main.py  models.py  prompts.py  pyproject.toml  tools.py
data/: billing_policy.txt  service_plans.txt  troubleshooting_guide.txt
docs/: chat_scenarios.md  chunking-strategy.md  prod_design_evaluation.md  tech_debt.md
docs/prod_design_architecture_diagram/: mermaid.md
eval/: chat_test_cases.json  eval_chat.py  eval_results.json  eval_results_chat.json  eval_results_chat_not_chunked.json  eval_results_not_chunked.json  eval_retrieval.py  retrieval_queries.json
scripts/: load_documents.py
sql/: vector_database.sql
