[project]
name = "qna-chat-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "google-genai>=1.0.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.1.0",
    "langchain-text-splitters>=1.1.1",
    "supabase>=2.28.2",
]
